fix: replace HttpServer with ServerSocket to fix Windows MSIX sandbox startup
Java 21's com.sun.net.httpserver.HttpServer uses WEPollSelectorImpl internally,
which requires AF_UNIX socket pipes that are unavailable inside the Windows MSIX
sandbox used by Claude Code Desktop. This causes an immediate IOException on
daemon startup (JDK-8312215).

Fix: replace HttpServer + HttpExchange with a plain ServerSocket bound to
127.0.0.1:7735. Each accepted connection is dispatched to a virtual thread via
Thread.ofVirtual(). Plain TCP loopback is always available inside MSIX.

New classes (server/ package):
- TcpHttpServer: ServerSocket acceptor loop, longest-prefix path routing
- TcpExchange: HTTP/1.1 request parser + response writer over raw Socket
- KcpHandler: minimal @FunctionalInterface replacing HttpHandler

Handler changes: BaseHandler and all 6 handlers updated to use TcpExchange
instead of HttpExchange. EventsHandler refactored to extend BaseHandler.
All 33 tests pass. No behaviour change on Linux/macOS.

Fixes #20 (reported by jonpetterhjulstad-tvimenning)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>